@@ -10,6 +10,7 @@ use namespace::clean;
 
 sub stuff {}
 
+our $CAN;
 use constant CAN => [ qw(stuff meta) ];
 use constant CANT => [ qw(catdir catfile devnull) ];
 
