@@ -10,6 +10,7 @@ use namespace::clean;
 
 sub child_stuff {}
 
+our $CAN;
 use constant CAN => [ qw(stuff role_stuff meta) ];
 use constant CANT => [ qw(catdir devnull catfile with) ];
 
