@@ -8,6 +8,7 @@ sub method { }
 
 sub callstuff { stuff(); 'called stuff' }
 
+our $CAN;
 use constant CAN => [ qw(stuff method callstuff) ];
 use constant CANT => [ ];
 use constant DIRTY => [ qw(stuff) ];
